cmake_minimum_required(VERSION 3.27)
project(C_C___Language)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_C___Language
        "VScode/C/Elab Questions/Q10_numOfSquaresInABoard.c"
        "VScode/C/Elab Questions/Q11_tallestAmongBrothers.c"
        "VScode/C/Elab Questions/Q12_weekToDays.c"
        "VScode/C/Elab Questions/Q13_costPrice_SellingPrice.c"
        "VScode/C/Elab Questions/Q14_doublePgOntoSinglePg.c"
        "VScode/C/Elab Questions/Q15_sumOfAngles_180.c"
        "VScode/C/Elab Questions/Q1_multiplyFLoatingNumbers.c"
        "VScode/C/Elab Questions/Q2_minMaxLenOfRS.c"
        "VScode/C/Elab Questions/Q3_MessFoodCount.c"
        "VScode/C/Elab Questions/Q4_cuboidSurfaceArea.c"
        "VScode/C/Elab Questions/Q5_quotientRemainder.c"
        "VScode/C/Elab Questions/Q6_numberOfPairs_X+Y_even.c"
        "VScode/C/Elab Questions/Q7_phoenixMall_PavingStone.c"
        "VScode/C/Elab Questions/Q8_sumOfNumbers.c"
        "VScode/C/Elab Questions/Q9_volumeOfSphere.c"
        "VScode/C/New folder/2ndprogram.c"
        "VScode/C/New folder/2ndprogramInput.c"
        "VScode/C/New folder/countApples.c"
        "VScode/C/New folder/firstProgram.c"
        "VScode/C/New folder/lengthOfArray.c"
        "VScode/C/New folder/Palindrome.C"
        "VScode/C/New folder/pointerFunction.c"
        "VScode/C/New folder/rough.c"
        "VScode/C/New folder/Trek_Question.c"
        "VScode/C/New folder/Trial_codes.c"
        VScode/C++/Unit_1_Lab_Week1/q1.cpp
        VScode/C++/Unit_1_Lab_Week1/q2.cpp
        VScode/C++/Unit_1_Lab_Week1/q3.cpp
        VScode/C++/Unit_1_Lab_Week1/q4.cpp
        VScode/C++/Unit_1_Lab_Week1/q5.cpp
        VScode/C++/Unit_1_Lab_Week1/q6.cpp
        VScode/C++/Unit_1_Lab_Week1/q7.cpp
        VScode/C++/Unit_1_Lab_Week1/q8.cpp
        VScode/C++/Unit_1_Lab_Week1/q9.cpp
        VScode/C++/worksheet/q1.cpp
        VScode/C++/worksheet/q10.cpp
        VScode/C++/worksheet/q11.cpp
        VScode/C++/worksheet/q12.cpp
        VScode/C++/worksheet/q13.cpp
        VScode/C++/worksheet/Q2.cpp
        VScode/C++/worksheet/q3.cpp
        VScode/C++/worksheet/q4.cpp
        VScode/C++/worksheet/q5.cpp
        VScode/C++/worksheet/q6.cpp
        VScode/C++/worksheet/q7.cpp
        VScode/C++/worksheet/q8.cpp
        VScode/C++/worksheet/Q9.cpp
        VScode/C++/worksheet_2nd/q1.cpp
        VScode/C++/worksheet_2nd/q2.cpp
        VScode/C++/worksheet_2nd/q3.cpp
        VScode/C++/worksheet_2nd/q4.cpp
        VScode/C++/worksheet_2nd/q5_incomplete.cpp
        VScode/C++/TEST.cpp
        VScode/C++/test2.cpp
        VScode/C++/test3.cpp)
